Update to more compact base box
Also added start of an Ansible playbook for provisioning a dev
environment

--- a/dev/Vagrantfile
+++ b/dev/Vagrantfile
@@ -13,4 +13,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         # Enable Intel VT-x/EPT virtualization in VM so we can boot guests
         v.vmx["vhv.enable"] = "TRUE"
     end
+
+    config.vm.provision "ansible" do |ansible|
+        ansible.playbook = "playbook.yaml"
+        ansible.verbose = "v"
+        ansible.host_key_checking = false
+    end
 end
